--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header_top bg-black px-3 d-flex justify-content-end align-items-center">
             <img class="logo_header" src="img/sony_logo.svg" alt="logo-sony">
         </div>
-        <div class="header_bottom bg-white">
+        <div class="header_bottom bg-white ">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
@@ -33,39 +33,39 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto mb-2 mb-xxl-0">
+                                    <ul class="navbar-nav me-auto mb-2 mb-xxl-0 ">
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Giochi
                                             </a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Hardware
                                             </a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Servizi
                                             </a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Novita'
                                             </a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Fai acquisti
                                             </a>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Supporto
                                             </a>
@@ -78,7 +78,7 @@
                     <div class=" header_right col d-none d-xxl-flex justify-content-end align-items-center">
                         <ul class="nav navbar-light d-flex align-items-center">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     My Playstation
                                 </a>
@@ -102,7 +102,7 @@
             <div class="hero_jumbo">
                 <img src="img/jumbo-bg.png" alt="returnal-hero">
             </div>
-            <div class="container">
+            <div class="container ">
                 <div class="row">
                     <div class="col-12  col-xxl-4">
                         <div class="hero_text">
