--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     </header>
     <main>
         <!-- HERO RETURNAL -->
-        <section class="hero text-white">
+        <section class="hero text-white  ">
             <div class="hero_jumbo">
                 <img src="img/jumbo-bg.png" alt="returnal-hero">
             </div>
             <div class="container ">
-                <div class="row">
+                <div class="row ">
                     <div class="col-12  col-xxl-4">
                         <div class="hero_text">
                             <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
@@ -180,7 +180,7 @@
             </div>
         </section>
         <!-- HERO it takes two -->
-        <section class="hero text-white it_takes_two">
+        <section class="hero  text-white it_takes_two">
             <div class="hero_jumbo">
                 <img src="img/it-takes-two-hero-banner-desktop.jpg" alt="returnal-hero">
             </div>
@@ -190,8 +190,7 @@
                         <div class="hero_text">
                             <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
                             <h2 class="my-3">Rompi il cerchio</h2>
-                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita
-                                in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                            <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
                             <button class="btn btn_orange my-3">acquista ora</button>
                         </div>
                     </div>
@@ -357,7 +356,44 @@
     <!-- footer -->
     <footer class="py-3">
         <div class="footer_top">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-xxl-6">
+                        <img src="img/ps-footer.svg" alt="">
+                        <div class="region d-flex gap-2 align-items-center py-3">
+                            <img class="globe my-auto" src="img/language-globe.svg" alt="">
+                            <p class="my-0">country / region: italy</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 col-xxl-2 ">
+                        <ul>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-4 col-xxl-2 ">
+                        <ul>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-4 col-xxl-2 ">
+                        <ul>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                            <li><a class="text-white fw-bold" href="#">link footer n</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="footer_bottom container py-3">
             <div class="col col-xxl-6">
