--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     <main>
         <!-- HERO RETURNAL -->
         <section class="hero text-white  ">
-            <div class="hero_jumbo">
+            <div class="hero_jumbo ratio ratio-21x9">
                 <img src="img/jumbo-bg.png" alt="returnal-hero">
             </div>
-            <div class="container ">
+            <div class="container">
                 <div class="row ">
                     <div class="col-12  col-xxl-4">
                         <div class="hero_text">
