--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         class="btn btn_black text-capitalize">accedi</button></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="img/lens.svg" alt=""></a>
+                                <a class="nav-link" href="#"><img src="img/lens.svg" alt="lens"></a>
                             </li>
                         </ul>
                     </div>
@@ -104,7 +104,7 @@
                     <div class="row ">
                         <div class="col-12  col-xxl-4">
                             <div class="hero_text">
-                                <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
+                                <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="returnal-banner-logo">
                                 <h2 class="my-3">Rompi il cerchio</h2>
                                 <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni
                                     rinascita
@@ -119,22 +119,22 @@
             <div class="container">
                 <div class="hero_carousel row mt-4">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-listing">
                     </div>
 
                 </div>
@@ -155,37 +155,37 @@
                         <button class="btn btn_blue">maggiori informazioni</button>
                     </div>
                     <div class="col-12 col-md-6">
-                        <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+                        <img class="img-fluid" src="img/playstation-5-thumb.png" alt="ps5-thumb">
                     </div>
                 </div>
                 <div class=" play_5_carousel row text-center">
                     <div class="col-4 col-md">
                         <div class="play_5_card">
-                            <img src="img/playstation-5-thumb.png" alt="">
+                            <img src="img/playstation-5-thumb.png" alt="ps5-thumb">
                             <h5 class="d-none d-md-block py-2">Console ps5</h5>
                         </div>
                     </div>
                     <div class="col-4 col-md">
                         <div class="play_5_card">
-                            <img src="img/joypad-thumb.png" alt="">
+                            <img src="img/joypad-thumb.png" alt="joypad-thumb">
                             <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
                         </div>
                     </div>
                     <div class="col-4 col-md">
                         <div class="play_5_card">
-                            <img src="img/headset-thumb.png" alt="">
+                            <img src="img/headset-thumb.png" alt="headset-thumb">
                             <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3&#8482;</h5>
                         </div>
                     </div>
                     <div class="col-4 col-md">
                         <div class="play_5_card">
-                            <img src="img/remote-thumb.png" alt="">
+                            <img src="img/remote-thumb.png" alt="remote-thumb">
                             <h5 class="d-none d-md-block py-2">Telecomando Media</h5>
                         </div>
                     </div>
                     <div class="col-4 col-md">
                         <div class="play_5_card">
-                            <img src="img/camera-thumb.jpg" alt="">
+                            <img src="img/camera-thumb.jpg" alt="camera-thumb">
                             <h5 class="d-none d-md-block py-2">Telecamera HD</h5>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                     <div class="row ">
                         <div class="col-12  col-xxl-4">
                             <div class="hero_text">
-                                <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
+                                <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="logo-it2">
                                 <h2 class="my-3">Un' avventura cooperativa selvaggia ti attende</h2>
                                 <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre
                                     vite in It Takes Two, un gicoc d'avventura cooperativa a piattaforme che stravolge
@@ -213,51 +213,51 @@
             <div class="container ">
                 <div class=" row  hero_carousel mt-4 ">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
 
@@ -274,19 +274,19 @@
             <div class="container">
                 <div class=" play_4_carousel row text-center">
                     <div class="col-12 col-md-4">
-                        <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                        <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="ps4-slim">
                         <h4 class=" py-2">Playstation 4</h4>
                         <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
                         <button class="btn btn_blue">Scopri di piu'</button>
                     </div>
                     <div class="col-12 col-md-4">
-                        <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
+                        <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="psvr">
                         <h4 class=" py-2">PlayStation VR</h4>
                         <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
                         <button class="btn btn_blue">Scopri di piu'</button>
                     </div>
                     <div class="col-12 col-md-4">
-                        <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                        <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="dualshock-4">
                         <h4 class=" py-2">Accessori</h4>
                         <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
                         <button class="btn btn_blue">Scopri di piu'</button>
@@ -299,14 +299,14 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between ">
                     <div class="col-12 col-md-6 py-5 py-md-0">
-                        <img class="ps-plus-logo" src="img/ps-plus-logo.png" alt="">
+                        <img class="ps-plus-logo" src="img/ps-plus-logo.png" alt="ps-plus-logo">
                         <p>Migliora la tua epserienza Playstation con l'accesso a multigiocatore online, giochi mensili,
                             sconti esclusivi e altro ancora.</p>
                         <button class="btn btn_grey">esplora playstation plus</button>
                     </div>
                     <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
                         <img class="ps-plus-games img-fluid"
-                            src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                            src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="ps-plus">
                     </div>
                 </div>
             </div>
@@ -321,13 +321,13 @@
             <div class="container">
                 <div class=" discount_carousel row text-center">
                     <div class="col-12 col-md-4 my-3">
-                        <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                        <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="games-under-20">
                     </div>
                     <div class="col-12 col-md-4 my-3">
-                        <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                        <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="store-golden-week">
                     </div>
                     <div class="col-12 col-md-4 my-3">
-                        <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                        <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="free-to-play">
                     </div>
                 </div>
             </div>
@@ -337,13 +337,13 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between ">
                     <div class="col-12 col-md-6 py-5 py-md-0">
-                        <img class="ps-plus-logo" src="img/ps-now-logo-two-column.png" alt="">
+                        <img class="ps-plus-logo" src="img/ps-now-logo-two-column.png" alt="ps-now-logo">
                         <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 o
                             PC Windows, con nuovi titoli aggiunti ogni mese.</p>
                         <button class="btn btn_white">esplora playstation now</button>
                     </div>
                     <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
-                        <img class="ps-plus-games img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
+                        <img class="ps-plus-games img-fluid" src="img/ps-now-april-featured-image-block.png" alt="ps-now-april">
                     </div>
                 </div>
             </div>
@@ -354,16 +354,16 @@
                 <h2>Seguici sui social media</h2>
                 <div class="row ">
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid" src="img/twitter.jpg" alt="">
+                        <img class="img-fluid" src="img/twitter.jpg" alt="twitter">
                     </div>
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid" src="img/facebook.jpg" alt="">
+                        <img class="img-fluid" src="img/facebook.jpg" alt="facebook">
                     </div>
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid" src="img/instagram.jpg" alt="">
+                        <img class="img-fluid" src="img/instagram.jpg" alt="instagram">
                     </div>
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid" src="img/youtube.png" alt="">
+                        <img class="img-fluid" src="img/youtube.png" alt="youtube">
                     </div>
                 </div>
             </div>
@@ -377,7 +377,7 @@
                     <div class="col-12 col-xxl-6">
                         <img src="img/ps-footer.svg" alt="">
                         <div class="region d-flex gap-2 align-items-center py-5">
-                            <img class="globe my-auto" src="img/language-globe.svg" alt="">
+                            <img class="globe my-auto" src="img/language-globe.svg" alt="globe">
                             <p class="my-0">country / region: italy</p>
                         </div>
                     </div>
