--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </section>
         <!-- socials -->
         <section class="socials py-5">
-            <div class="container text-center">
+            <div class="container text-center d-md-none">
                 <h2>Seguici sui social media</h2>
                 <div class="row ">
                     <div class="col-6 col-sm-3 my-3">
@@ -385,6 +385,25 @@
                     </div>
                     <div class="col-6 col-sm-3 my-3">
                         <img class="img-fluid" src="img/youtube.png" alt="youtube">
+                    </div>
+                </div>
+            </div>
+            <div class="container_custom text-center d-none d-md-block">
+                <div class="container-fluid">
+                    <h2>Seguici sui social media</h2>
+                    <div class="row ">
+                        <div class="col-6 col-sm-3 my-3">
+                            <img class="img-fluid" src="img/twitter.jpg" alt="twitter">
+                        </div>
+                        <div class="col-6 col-sm-3 my-3">
+                            <img class="img-fluid" src="img/facebook.jpg" alt="facebook">
+                        </div>
+                        <div class="col-6 col-sm-3 my-3">
+                            <img class="img-fluid" src="img/instagram.jpg" alt="instagram">
+                        </div>
+                        <div class="col-6 col-sm-3 my-3">
+                            <img class="img-fluid" src="img/youtube.png" alt="youtube">
+                        </div>
                     </div>
                 </div>
             </div>
