--- a/index.html
+++ b/index.html
@@ -290,23 +290,28 @@
             <div class="container">
                 <div class=" play_4_carousel row text-center">
                     <div class="col-12 col-md-4">
-                        <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="ps4-slim">
-                        <h4 class=" py-2">Playstation 4</h4>
-                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
-                        <button class="btn btn_blue">Scopri di piu'</button>
+                        <div class="play_4_card">
+                            <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="ps4-slim">
+                            <h4 class=" py-2">Playstation 4</h4>
+                            <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                            <button class="btn btn_blue">Scopri di piu'</button>
+                        </div>
                     </div>
                     <div class="col-12 col-md-4">
-                        <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="psvr">
-                        <h4 class=" py-2">PlayStation VR</h4>
-                        <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
-                        <br>
-                        <button class="btn btn_blue">Scopri di piu'</button>
+                        <div class="play_4_card">
+                            <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="psvr">
+                            <h4 class=" py-2">PlayStation VR</h4>
+                            <p>Oltre 500 titoli ed esperienze di gioco. <br> Scoprili tutti.</p>
+                            <button class="btn btn_blue">Scopri di piu'</button>
+                        </div>
                     </div>
                     <div class="col-12 col-md-4">
-                        <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="dualshock-4">
-                        <h4 class=" py-2">Accessori</h4>
-                        <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
-                        <button class="btn btn_blue">Scopri di piu'</button>
+                        <div class="play_4_card">
+                            <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="dualshock-4">
+                            <h4 class=" py-2">Accessori</h4>
+                            <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                            <button class="btn btn_blue">Scopri di piu'</button>
+                        </div>  
                     </div>
                 </div>
             </div>
