--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto mb-2 mb-xxl-0 ">
+                                    <ul class="navbar-nav me-auto  ">
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -74,27 +74,25 @@
                                             </a>
                                         </li>
                                     </ul>
+                                    <ul class="navbar-nav d-flex align-items-center  ">
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                My Playstation
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#"><button
+                                                    class="btn btn_black text-capitalize">accedi</button></a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#"><img src="img/lens.svg" alt="lens"></a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </nav>
-                    </div>
-                    <div class=" header_right col d-none d-xxl-flex justify-content-end align-items-center">
-                        <ul class="nav navbar-light d-flex align-items-center">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    My Playstation
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><button
-                                        class="btn btn_black text-capitalize">accedi</button></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="img/lens.svg" alt="lens"></a>
-                            </li>
-                        </ul>
-                    </div>
+                    </div>   
                 </div>
             </div>
         </div>
