--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    <ul class="navbar-nav d-flex align-items-center  ">
-                                        <li class="nav-item dropdown">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item dropdown my-auto">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 My Playstation
@@ -85,8 +85,8 @@
                                             <a class="nav-link" href="#"><button
                                                     class="btn btn_black text-capitalize">accedi</button></a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#"><img src="img/lens.svg" alt="lens"></a>
+                                        <li class="nav-item my-auto">
+                                            <a class="nav-link" href="#"><img class="lens" src="img/lens.svg" alt="lens"></a>
                                         </li>
                                     </ul>
                                 </div>
